--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/JdbcConnectionManagerWindow.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/JdbcConnectionManagerWindow.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="c0809" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="c0809" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -21,38 +21,46 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Add"/>
+              <text resource-bundle="com/l7tech/console/panels/resources/JdbcConnectionManagerWindow" key="button.add"/>
             </properties>
           </component>
           <component id="68c83" class="javax.swing.JButton" binding="editButton" default-binding="true">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Edit"/>
+              <text resource-bundle="com/l7tech/console/panels/resources/JdbcConnectionManagerWindow" key="button.edit"/>
             </properties>
           </component>
           <component id="b12b5" class="javax.swing.JButton" binding="removeButton" default-binding="true">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Remove"/>
+              <text resource-bundle="com/l7tech/console/panels/resources/JdbcConnectionManagerWindow" key="button.remove"/>
             </properties>
           </component>
           <component id="632e4" class="javax.swing.JButton" binding="closeButton" default-binding="true">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Close"/>
+              <text resource-bundle="com/l7tech/console/panels/resources/JdbcConnectionManagerWindow" key="button.close"/>
             </properties>
           </component>
           <vspacer id="783be">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
+          <component id="d38e2" class="javax.swing.JButton" binding="copyButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/console/panels/resources/JdbcConnectionManagerWindow" key="button.copy"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <scrollpane id="95a25">
