--- a/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/java/com/l7tech/external/assertions/icapantivirusscanner/console/IcapAntivirusScannerPropertiesDialog.form
+++ b/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/java/com/l7tech/external/assertions/icapantivirusscanner/console/IcapAntivirusScannerPropertiesDialog.form
@@ -69,12 +69,12 @@
             </constraints>
             <properties/>
           </component>
-          <component id="7de45" class="javax.swing.JCheckBox" binding="failAssertionIfVirusCheckBox" default-binding="true">
+          <component id="7de45" class="javax.swing.JCheckBox" binding="continueIfVirusFound">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <selected value="true"/>
+              <selected value="false"/>
               <text resource-bundle="com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources" key="main.checkbox.failAssertion"/>
             </properties>
           </component>
