--- a/modules/gateway/assertions/JDBCQueryAssertion/src/main/java/com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/JDBCQueryAssertion/src/main/java/com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog.form
@@ -38,7 +38,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="true"/>
+            </properties>
           </component>
         </children>
       </grid>
