--- a/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/HostKeyDialog.form
+++ b/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/HostKeyDialog.form
@@ -39,13 +39,13 @@
           </component>
         </children>
       </grid>
-      <grid id="d9c92" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d9c92" binding="hostKeyFieldPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="etched" title-resource-bundle="com/l7tech/external/assertions/ssh/console/HostKeyDialog" title-key="sshHostKeyLabel"/>
+        <border type="etched"/>
         <children>
           <scrollpane id="aa360">
             <constraints>
