--- a/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.form
+++ b/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.form
@@ -423,7 +423,7 @@
             <properties/>
             <border type="etched" title-resource-bundle="com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel" title-key="authLabel"/>
             <children>
-              <grid id="2dcc3" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="2dcc3" binding="specifyUserCredentialsPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -578,7 +578,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <enabled value="false"/>
+                  <enabled value="true"/>
                   <selected value="false"/>
                   <text resource-bundle="com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel" key="passThroughCredentialsLabel"/>
                 </properties>
